# SwarmFit

./: .gitignore  README.md
docs/: dev_docs.md  project_spec.md  user_doc.md
src/: CMakeLists.txt  build.sh  config.h  const.h  csv_handler.cpp  csv_handler.h  fit_runner.cpp  fit_runner.h  helper.py  main.cpp  types.h
src/evaluators/: base.h  mse.cpp  mse.h
src/models/: base.h  linear.cpp  linear.h  sine.cpp  sine.h
src/pso/: context.h  optimizer.h  particle.h  pso_config.h
src/utils/: data.h  parallel.h  random.h
